--- a/week1-day1/exercise/index.html
+++ b/week1-day1/exercise/index.html
@@ -1,21 +1,35 @@
-<!DOCTYPE html>
 <html>
 
 <head>
-    <title>Tutorial Website</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Chess</title>
 </head>
 
 <body>
-    <div class="main-container">
-        <div class="header">
-            <h1>The Book of Chess</h1>
-        </div>
-        <div class="main-content">
+    <!-- Container is to wrap everything -->
+    <div id="container">
+        <!-- Website Brand -->
+        <header>CPL Chess Collection</header>
+        <!-- Main Navigation -->
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Collection</li>
+                <li>Contact Us</li>
+                <li>Gallery</li>
+            </ul>
+        </nav>
+        <!-- Main Content -->
+        <main>
+            <h1>De ludo scachorum</h1>
+            <h2>On the Game of Chess</h2>
+            <p><b>"De ludo scachorum"</b>b> translates to <em>"On the Game of Chess"</em> in English. It is one of the earliest works which discusses the game of chess in a systematic and analytical manner. The book contains various problems and solutions related to chess and was one of the early attempts to analyze the game mathematically.</p>
             <img src="chess.jpg">
-            <p>"De ludo scachorum" translates to "On the Game of Chess" in English. It is one of the earliest works which discusses the game of chess in a systematic and analytical manner. The book contains various problems and solutions related to chess and was one of the early attempts to analyze the game mathematically.</p>
-        </div>
+            <p style="text-align:center;color:blue;">De ludo scachorum</p>
+        </main>
+        <!-- Footer -->
+        <footer>&copy; Copyright 2023</footer>
     </div>
+    <!-- End Container -->
 </body>
 
 </html>
