--- a/week1-day1/exercise/index.html
+++ b/week1-day1/exercise/index.html
@@ -22,7 +22,7 @@
         <main>
             <h1>De ludo scachorum</h1>
             <h2>On the Game of Chess</h2>
-            <p><b>"De ludo scachorum"</b>b> translates to <em>"On the Game of Chess"</em> in English. It is one of the earliest works which discusses the game of chess in a systematic and analytical manner. The book contains various problems and solutions related to chess and was one of the early attempts to analyze the game mathematically.</p>
+            <p><b>"De ludo scachorum"</b> translates to <em>"On the Game of Chess"</em> in English. It is one of the earliest works which discusses the game of chess in a systematic and analytical manner. The book contains various problems and solutions related to chess and was one of the early attempts to analyze the game mathematically.</p>
             <img src="chess.jpg">
             <p style="text-align:center;color:blue;">De ludo scachorum</p>
         </main>
