--- a/week4-day2/homework-module1/contact.html
+++ b/week4-day2/homework-module1/contact.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
-  <body id="contact">
+  <body id="contact" onload="disableButton(true)">
     <div class="container">
       <header>
         <div class="main-header">
